--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
     "express": "^5.1.0"
   },
   "devDependencies": {
+    "jest": "^30.0.5",
     "nodemon": "^3.1.10"
   },
   "name": "helpme",
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "nodemon --env-file=.env app.js"
   },
   "keywords": [],
