--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
-  "dependencies": {
-    "dotenv": "^17.2.1",
-    "ejs": "^3.1.10",
-    "express": "^5.1.0"
-  },
-  "devDependencies": {
-    "jest": "^30.0.5",
-    "nodemon": "^3.1.10"
-  },
-  "name": "helpme",
-  "version": "1.0.0",
-  "main": "app.js",
-  "scripts": {
-    "test": "jest",
-    "start": "nodemon --env-file=.env app.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+   "name": "helpmev1",
+   "version": "1.0.0",
+   "main": "app.js",
+   "scripts": {
+      "start": "nodemon app.js",
+      "test": "jest"
+   },
+   "author": "",
+   "license": "ISC",
+   "dependencies": {
+      "date-fns": "^4.1.0",
+      "dotenv": "^16.6.1",
+      "ejs": "^3.1.10",
+      "express": "^5.1.0",
+      "express-session": "^1.18.1",
+      "path": "^0.12.7"
+   },
+   "devDependencies": {
+      "@eslint/js": "^9.28.0",
+      "eslint": "^9.28.0",
+      "globals": "^16.2.0",
+      "jest": "^29.7.0",
+      "nodemon": "^3.1.10"
+   },
+   "keywords": [],
+   "description": ""
 }
