--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-   "name": "helpmev1",
+   "name": "helpmev2",
    "version": "1.0.0",
    "main": "app.js",
    "scripts": {
@@ -14,6 +14,7 @@
       "ejs": "^3.1.10",
       "express": "^5.1.0",
       "express-session": "^1.18.1",
+      "express-validator": "^7.2.1",
       "path": "^0.12.7"
    },
    "devDependencies": {
